@@ -3,3 +3,5 @@ mobac.mapsources.mappacks.region_europe_east.FreemapSlovakia
 mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaCycling
 mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaHiking
 mobac.mapsources.mappacks.region_europe_east.MoldovaPointMd
+mobac.mapsources.mappacks.region_europe_east.Turaterkep
+mobac.mapsources.mappacks.region_europe_east.OSMapaTopo
